# org-server

./: .gitignore  Cargo.toml  README.md
parser/: Cargo.toml
parser/src/: lib.rs  movable.rs  org.pest  parser.rs  remainder.rs  reminder.rs
parser/tests/resources/: test-1.org
server/: Cargo.toml
server/src/: config.rs  main.rs  notification.rs  parse.rs  remainders.rs  reminders.rs  utils.rs  watcher.rs  web.rs
