[workspace.package]
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "Org server"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
  "server",
  "parser",
]

[workspace.dependencies]
anyhow = "1"
libc = "0.2"
nix = { version = "0.26", features = ["signal"] }
xdg = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1"
shellexpand = "3"
once_cell = "1"
dirs = "5"
futures = "0.3"
xid = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
